--- a/index.html
+++ b/index.html
@@ -454,14 +454,13 @@
       </li>
     </ul>
   </div>
-
   <!-- login -->
 
   <!-- wode -->
   <div class="wode-page wode aui-hide" id="wode">
     <header>
       <img class="header-avatar" src="./image/wode/avatar.png">
-      <p class="header-phone" id="phone">18505511392</p>
+      <p class="header-phone" id="phone"></p>
       <ul class="header-detail">
         <li class="header-detail-item">
           <p class="detail-item-number" id="count-record">0</p>
@@ -735,7 +734,10 @@
   <script type="text/javascript" charset="utf-8" src="./script/component/zepto.js"></script>
   <script type="text/javascript" charset="utf-8" src="./script/component/iconClass.js"></script>
   <script type="text/javascript" charset="utf-8" src="./script/component/roll.js"></script>
+  <script type="text/javascript" charset="utf-8" src="./script/component/jquery.js"></script>
+  <script type="text/javascript" charset="utf-8" src="./script/component/toast.js"></script>
 
+  <script type="text/javascript" charset="utf-8" src="./script/business/account.js"></script>
   <script type="text/javascript" charset="utf-8" src="./script/business/index.js"></script>
   <script type="text/javascript" charset="utf-8" src="./script/business/mingxi.js"></script>
   <script type="text/javascript" charset="utf-8" src="./script/business/jizhang.js"></script>
@@ -744,6 +746,5 @@
   <script type="text/javascript" charset="utf-8" src="./script/business/yijianfankui.js"></script>
   <script type="text/javascript" charset="utf-8" src="./script/business/wode.js"></script>
   <script type="text/javascript" charset="utf-8" src="./script/business/empower.js"></script>
-
 </body>
 </html>
