--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <title>首页</title>
   <link rel="stylesheet" type="text/css" href="./css/aui.css">
   <link rel="stylesheet" type="text/css" href="./css/aui-extends.css">
+  <link rel="stylesheet" type="text/css" href="./css/animate.css">
+  <link rel="stylesheet" type="text/css" href="./css/toast.css">
   <!-- 图标 -->
   <link rel="stylesheet" type="text/css" href="./iconfont/iconfont.css">
   <!-- 日历css -->
@@ -662,7 +664,7 @@
       </div>
     </header>
     <section class="ershoujiaoyi-inner">
-      <iframe src="http://2.zol.com.cn/"></iframe>
+      <!-- <iframe src="http://2.zol.com.cn/"></iframe> -->
     </section>
   </div>
 
@@ -676,7 +678,7 @@
       </div>
     </header>
     <section class="kuaidi100-inner">
-      <iframe src="http://www.kuaidi100.com"></iframe>
+      <!-- <iframe src="http://www.kuaidi100.com"></iframe> -->
     </section>
   </div>
 
@@ -690,7 +692,7 @@
       </div>
     </header>
     <section class="sourcedb-inner">
-      <iframe src="http://www.boc.cn/sourcedb/whpj/"></iframe>
+      <!-- <iframe src="http://www.boc.cn/sourcedb/whpj/"></iframe> -->
     </section>
   </div>
 
@@ -704,7 +706,7 @@
       </div>
     </header>
     <section class="weizhang-inner">
-      <iframe src="http://chaxun.weizhang8.cn/"></iframe>
+      <!-- <iframe src="http://chaxun.weizhang8.cn/"></iframe> -->
     </section>
   </div>
 
@@ -734,7 +736,7 @@
   <script type="text/javascript" charset="utf-8" src="./script/component/zepto.js"></script>
   <script type="text/javascript" charset="utf-8" src="./script/component/iconClass.js"></script>
   <script type="text/javascript" charset="utf-8" src="./script/component/roll.js"></script>
-  <script type="text/javascript" charset="utf-8" src="./script/component/jquery.js"></script>
+  <script type="text/javascript" charset="utf-8" src="./script/component/jquery.min.js"></script>
   <script type="text/javascript" charset="utf-8" src="./script/component/toast.js"></script>
 
   <script type="text/javascript" charset="utf-8" src="./script/business/account.js"></script>
