--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="maximum-scale=1.0, minimum-scale=1.0, user-scalable=0, initial-scale=1.0, width=device-width" />
+  <meta name="viewport" content="maximum-scale=1.0, minimum-scale=1.0, user-scalable=0, initial-scale=1.0, width=device-width"
+  />
   <meta name="format-detection" content="telephone=no, email=no, date=no, address=no">
   <script type="text/javascript" charset="utf-8" src="./script/component/flexible.js"></script>
   <title>首页</title>
@@ -15,7 +16,6 @@
   <link rel="stylesheet" type="text/css" href="./iconfont/iconfont.css">
   <!-- 日历css -->
   <link rel="stylesheet" href="https://at.alicdn.com/t/font_234130_nem7eskcrkpdgqfr.css">
-
 </head>
 
 <body>
@@ -738,6 +738,7 @@
   <script type="text/javascript" charset="utf-8" src="./script/component/roll.js"></script>
   <script type="text/javascript" charset="utf-8" src="./script/component/jquery.min.js"></script>
   <script type="text/javascript" charset="utf-8" src="./script/component/toast.js"></script>
+  <script type="text/javascript" charset="utf-8" src="./script/component/prepare.js"></script>
 
   <script type="text/javascript" charset="utf-8" src="./script/business/account.js"></script>
   <script type="text/javascript" charset="utf-8" src="./script/business/index.js"></script>
@@ -749,4 +750,5 @@
   <script type="text/javascript" charset="utf-8" src="./script/business/wode.js"></script>
   <script type="text/javascript" charset="utf-8" src="./script/business/empower.js"></script>
 </body>
+
 </html>
