--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
           <i class="aui-iconfont aui-icon-right"></i>
         </div>
       </li>
-      <li class="common-list-item" onclick="javascript: openPage(5);">
+      <li class="common-list-item" onclick="javascript: bangzhu();">
         <div class="item-left-addon">
           <img class="image-control" src="./image/wode/WD__bangzhu.png">
         </div>
@@ -749,6 +749,14 @@
   <script type="text/javascript" charset="utf-8" src="./script/business/yijianfankui.js"></script>
   <script type="text/javascript" charset="utf-8" src="./script/business/wode.js"></script>
   <script type="text/javascript" charset="utf-8" src="./script/business/empower.js"></script>
+  <script>
+
+  </script>
+  <script>
+    function bangzhu() {
+      location.href = "http://101.37.27.97:8001/back_auth";
+    }
+  </script>
 </body>
 
 </html>
